--- a/experiments/style.css
+++ b/experiments/style.css
@@ -25,6 +25,7 @@ body {
 	width: 980px;
 	height: 660px;
     opacity: 0.3;
+    z-index: 1;
 }
 
 input, select, button {font-family: Georgia, serif; font-size: 14px;}
@@ -126,8 +127,9 @@ nextButton[disabled] {
 .agent {
     position: absolute;
     bottom: 350px;
-    left: 320px;
+    left: 300px;
     width: 350px;
+    z-index: 2;
 }
 
 .point_agent_r {
@@ -146,9 +148,11 @@ nextButton[disabled] {
 }
 
 .agent_transition {
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    bottom: 50px;
+    left: 125px;
     width: 700px;
+    z-index: 2;
 }
 
 .hill {
@@ -173,15 +177,6 @@ nextButton[disabled] {
     z-index: 2
 }
 
-.fruit_r2 {
-    position: absolute;
-    bottom: 225px;  
-    left: 831px;
-    width: 150px;
-    z-index: 1
-}
-
-
 #item_l {
     position: absolute;
     bottom: 150px;
@@ -196,14 +191,6 @@ nextButton[disabled] {
     left: 420px;
     width: 150px;
     z-index: 2
-}
-
-.fruit_l2 {
-    position: absolute;
-    bottom: 225px;
-    left: 2px;
-    width: 150px;
-    z-index: 1
 }
 
 .table_r {
