--- a/experiments/style.css
+++ b/experiments/style.css
@@ -22,8 +22,8 @@ body {
 }
 
 .background {
-	width: 980px;
-	height: 660px;
+	width: 100%;
+	height: 650px;
     opacity: 0.3;
     z-index: 1;
 }
@@ -102,7 +102,7 @@ nextButton {
 	min-width: 100px;
     position: absolute;
     bottom: 0px;
-    left: 430px;
+    left: 410px;
     z-index: 2
 }
 
@@ -112,7 +112,7 @@ nextButton:active {
     bottom: 10px;
     position: absolute;
     bottom: 0px;
-    left: 430px;
+    left: 410px;
     z-index: 2
 }
 
@@ -180,7 +180,7 @@ nextButton[disabled] {
 #item_l {
     position: absolute;
     bottom: 100px;
-    left: 100px;
+    left: 130px;
     width: 150px;
     z-index: 2
 }
@@ -188,7 +188,7 @@ nextButton[disabled] {
 #item_m {
     position: absolute;
     bottom: 100px;
-    left: 400px;
+    left: 405px;
     width: 150px;
     z-index: 2
 }
