--- a/experiments/style.css
+++ b/experiments/style.css
@@ -94,7 +94,7 @@ startButton[disabled] {
 }
 
 nextButton {
-	background: url(images/button-gradient.png);
+	background: lightgrey;
 	margin: 10px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -102,7 +102,7 @@ nextButton {
 	min-width: 100px;
     position: absolute;
     bottom: 0px;
-    left: 410px;
+    left: 430px;
     z-index: 2
 }
 
@@ -112,7 +112,7 @@ nextButton:active {
     bottom: 10px;
     position: absolute;
     bottom: 0px;
-    left: 410px;
+    left: 430px;
     z-index: 2
 }
 
@@ -123,6 +123,7 @@ nextButton[disabled] {
 	border-left: 1px solid #e0e0e0;
 	cursor: not-allowed;
 }
+
 
 .agent {
     position: absolute;
